# RaychelLogger

./: .gitignore  .travis.yml  CMakeLists.txt  Doxyfile  README.md  RaychelLoggerConfig.cmake
include/RaychelLogger/: Helper.h  Logger.h
src/: CMakeLists.txt  Logger.cpp
test/: CMakeLists.txt  main.test.cpp
